# Automation-Groupwork

./: .gitignore  CMakeLists.txt  DFA-minimization.cpp  DFA-minimization.hpp  DFA-output.cpp  DFA-output.hpp  FAtoNFAwithEpsilon.cpp  FAtoNFAwithEpsilon.hpp  LICENSE  NFAtoDFA.cpp  NFAtoDFA.hpp  README.md  REtoNFAwithEpsilon.cpp  REtoNFAwithEpsilon.hpp  RG.cpp  RG.hpp  clear_nousage_state.cpp  clear_nousage_state.hpp  design.md  nfa.cpp  nfa.hpp  test.cpp  util.cpp  util.hpp  view.drawio  wy_test.cpp
NtoD/: NtoDmain.cpp
basic_types/: CMakeLists.txt  Edge.cpp  Edge.hpp  Edge_imp.hpp  Map.cpp  Map.hpp  Node.cpp  Node.hpp  RG.cpp  RG.hpp  macros.cpp  macros.hpp
test_data/: re_1.txt  re_2.txt  re_3.txt  re_4.txt  re_5.txt
